[package]
name = "graphql-subscriptions-simple-example"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.9.8"
async-graphql-actix-web = "2.9.8"
actix-web = "3.3.2"
actix-rt = "1.1.0"
actix-web-actors = "3.0.0"

env_logger = "0.9"
serde = "1.0"
serde_json = "1.0"

slab = "0.4.2"
futures = "0.3.0"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
derive-new = "0.5.9"